Mongodb text search (#14)
* Mongodb full text search

* Add full text search in mongodb storage